...
}

struct ListState: Equatable {
    var sortMode: ListSort = .alphabetical
    var garments: [Garment] = []
    var navigation: NavigationState = .None
    var add = AddState()
    var detail: DetailState?
}

enum ListAction: Equatable {
    case fetchGarments
    case sortChanged(ListSort)
    case sortGarments
    case navigate(NavigationState)
    case selected(Garment?)
    case clear
    case add(AddAction)
    case detail(DetailAction)
}

struct ListEnvironment {
    
...
